3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

plugins/cfpython/Makefile.in: rebuilt.
Andreas Kirschbaum 2005-11-23

Plugins can now get archetypes. Added a check in cfapi_object_set_property to
 prevent changing archtypes.
Fixed some Python bugs related to map properties.
Added Crossfire.GetArchetypes and Crossfire.GetMaps to get all archetypes/maps.
Modified files:
 include/plugin.h sproto.h
 plugins/cfpython/include: cfpython.h cfpython_map_private.h cfpython_object_private.h
 plugins/cfpython/cfpython.c cfpython_map.c cfpython_object.c
 server/plugins.c
New files:
 plugins/cfpython/include/cfpython_archetype.h cfpython_archetype_private.h
 plugins/cfpython/cfpython_archetype.c
Ryo 2005-11-20

server/shop.c: adjust minimum value that shop_specialisation_ratio can
return to 0.1. This should stop some prices being exceptionally high.
Brendan Lally 2005-11-19

Commit for new blocking code.  Not going to dictate all the changes -
but will outline the broad points.  Note also that the
doc/Developers/objects is updated and goes into more details also.
- check for P_WALL no longer used - instead, need to use GET_MAP_MOVE_BLCOK
  and check against movement type of objects.
- arch_blocked() changed to ob_blocked(), now takes object.  Needed because
  just looking at archetype move_ values is no longer sufficient.
- find_first_free_spot() changed to take object, since it just calls
  arch_blocked()
- FLAG_FLYING removed, now in move type.
- walk_on/walk_off/fly_on/fly_off removed - now based on move_on and
  move_off fields.
- Map space structure extended to hold the move_on/move_off, etc
  values so that we can shortcut some processing by not having to